# sktime_lessons_lectures

./: 01 - Basic Forecasting.ipynb  02 - Advanced Forecasting.ipynb  03 - Probabilistic Forecasting Intro.ipynb  04 - Advanced Probabilistic Forecasting.ipynb  05 - Panel and Hierarchical.ipynb  06 - Deep learning for forecasting.ipynb  07 - SpatioTemporal Forecasting.ipynb  08 - Foundation Models.ipynb  09 - Extend, plugin, contribution patterns - interaction and integration.ipynb  README.md  pyproject.toml  requirements.txt  requirements_deeplearning.txt
exercises/: week1.md
exercises/week1_data/: X.csv  y.csv
